--- a/filesystem.html
+++ b/filesystem.html
@@ -14,19 +14,17 @@
         <div id="logo">
             <img src="./images/programming.png" alt="programming">
         </div>
-        <nav>
-            <h1>File System</h1>
-        </nav>
+        <nav id="menu">
+            <a href="filesystem.html" class="menu-item active">
+                <div>File System</div> 
+            </a>
+        
+            <a href="git.html" class="menu-item ">
+                <div>Git</div> 
+            </a>
+    </nav>
     </header>
     <main>
-        <div id="menu">
-            <a href="filesystem.html" >
-                <div class="menu-item active">File System</div> 
-            </a>
-            <a href="git.html" >
-                <div class="menu-item">Git</div> 
-            </a>
-        </div>
         <article>
             <section>
                 <h2>Leer un archivo</h2>
